--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ body {
 .hero::before {
     background-image:
         radial-gradient(circle at 2px 2px, rgba(255,255,255,0.45) 2px, transparent 2px),
-        radial-gradient(circle at 22px 22px, rgba(0,122,255,0.35) 2px, transparent 2px);
+        radial-gradient(circle at 22px 22px, rgba(0, 123, 255, 0.986) 2px, transparent 2px);
     background-size: 70px 70px, 70px 70px;
     background-position: 0 0, 35px 35px;
     animation: heroDotsShift 5s linear infinite;
@@ -128,12 +128,12 @@ body {
 .hero::after {
     background-image:
     radial-gradient(circle at 8px 8px, rgba(255,255,255,0.22) 3px, transparent 3px),
-    radial-gradient(circle at 38px 38px, rgba(14, 117, 252, 0.915) 4px, transparent 4px);
+    radial-gradient(circle at 38px 38px, rgba(0, 110, 255, 0.915) 4px, transparent 4px);
     background-size: 95px 95px, 135px 135px;
     background-position: 0 0, 48px 48px;
     mix-blend-mode: lighten;
     opacity: .35;
-    filter: drop-shadow(0 0 8px rgba(100,170,255,0.3)) drop-shadow(0 0 16px rgba(100,170,255,0.15));
+}
 }
 
 @keyframes heroDotsShift {
