Simplify animation code to fix dots not moving issue

--- a/styles.css
+++ b/styles.css
@@ -121,13 +121,8 @@ body {
         radial-gradient(circle at 22px 22px, rgba(0, 123, 255, 0.986) 2px, transparent 2px);
     background-size: 70px 70px, 70px 70px;
     background-position: 0 0, 35px 35px;
-    -webkit-animation: heroDotsShift 10s linear infinite;
-    -moz-animation: heroDotsShift 10s linear infinite;
-    -o-animation: heroDotsShift 10s linear infinite;
-    animation: heroDotsShift 10s linear infinite;
+    animation: heroDotsShift 8s linear infinite;
     opacity: .75;
-    will-change: background-position;
-    transform: translateZ(0);
 }
 
 .hero::after {
@@ -140,19 +135,13 @@ body {
 }
 }
 
-@-webkit-keyframes heroDotsShift {
-    0% { background-position: 0 0, 35px 35px; }
-    100% { background-position: 70px 70px, 105px 105px; }
-}
-
-@-moz-keyframes heroDotsShift {
-    0% { background-position: 0 0, 35px 35px; }
-    100% { background-position: 70px 70px, 105px 105px; }
-}
-
 @keyframes heroDotsShift {
-    0% { background-position: 0 0, 35px 35px; }
-    100% { background-position: 70px 70px, 105px 105px; }
+    0% { 
+        background-position: 0 0, 35px 35px; 
+    }
+    100% { 
+        background-position: 70px 70px, 105px 105px; 
+    }
 }
 
 @keyframes heroDotsParallax {
